--- a/src/memmap.cfg
+++ b/src/memmap.cfg
@@ -1,6 +1,6 @@
 MEMORY {
     ZP:        start =    $0, size =  $100, type   = rw;
-    ZP2:        start =   $0e, size =  $80-$0e-10, type = rw, fill = no, file = "build/userland.bin";
+    ZP2:        start =   $0e, size =  $80-$0e-10, type = rw, fill = no, file = "userland.bin";
     ROM:       start = $1000, size = $1000, file   = %O;
 }
 
