--- a/src/memmap.cfg
+++ b/src/memmap.cfg
@@ -5,7 +5,7 @@ MEMORY {
 }
 
 SEGMENTS {
-            RODATA: load = ROM, type = ro;
+            CODE: load = ROM, type = ro;
             USERLAND: load = ZP2, type = rw;
             ZEROPAGE:	load = ZP, type = zp;
             VECTORS6502: load = ROM, start = $1FFA, type = overwrite;
